refactor: update dashboard layout and styles; add new screen prompt image

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="toolbar">
+<!-- <mat-toolbar color="primary" class="toolbar">
   <span class="flex items-center gap-2">
     <mat-icon>school</mat-icon>
     <span class="font-bold">{{ title }}</span>
@@ -18,7 +18,7 @@
       <span class="ml-1">Review</span>
     </a>
   </nav>
-</mat-toolbar>
+</mat-toolbar> -->
 
 <main class="container mx-auto p-4 max-w-7xl">
   <router-outlet />
